# clipboard-win-html

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: lib.rs
tests/: test_simple.rs
