[package]
name = "clipboard-win-html"
version = "0.1.0"
edition = "2021"
authors = ["Kyle L. Davis <aceofspades5757.github@gmail.com>"]
description = "Copy HTML to Windows clipboard."

readme = "README.md"
license = "MIT OR Apache-2.0"

homepage = "https://github.com/AceofSpades5757/clipboard-win-html"
repository = "https://github.com/AceofSpades5757/clipboard-win-html"

[dependencies]
