[package]
name = "clipboard-win-html"
version = "0.1.2"
edition = "2021"
authors = ["Kyle L. Davis <aceofspades5757.github@gmail.com>"]
description = "Copy HTML to Windows clipboard."

readme = "README.md"
license = "MIT OR Apache-2.0"

homepage = "https://github.com/AceofSpades5757/clipboard-win-html"
repository = "https://github.com/AceofSpades5757/clipboard-win-html"

[dependencies.windows]
# Windows API
version = "0.37.0"
features = [
    "Win32_System_DataExchange",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Globalization",
]
